syntax = "proto3";
package api;
option go_package = "milliy/generated/api";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Service API";
        version: "1.0";
        description: "API for twit management";
        contact: {
            name: "Api service";
            url: "https://github.com/CHQBT/Api";
            email: "nurmuhammadmel@gmail.com";
        };
    };
    security_definitions: {
        security: {
            key: "ApiKeyAuth"
            value: {
                type: TYPE_API_KEY;
                in: IN_HEADER;
                name: "Authorization";
            }
        }
    };
};

service UserService {
    rpc Login(LoginReq) returns (LoginRes) {
        option (google.api.http) = {
            post: "/v1/user/login"
            body: "*"
        };
    }
    

}

message LoginReq{
    string login=1;
    string password=2;
}
  
message LoginRes{
    string id=1;
    string role=2;
    string token=3;
}


